# ImageToolbox

./: .gitignore  ARCHITECTURE.md  ARCHITECTURE.mmd  CONTRIBUTING.md  README.md  build.gradle  build.gradle.kts  compose_compiler_config.conf  gradle.properties  gradlew  settings.gradle  settings.gradle.kts
.github/: FUNDING.yml  dependabot.yml
app/: .gitignore  build.gradle  build.gradle.kts  proguard-rules.pro
avif-coder/: build.gradle.kts
avif-coder-coil/: build.gradle.kts
avif-coder/src/main/cpp/: CMakeLists.txt  coder.cpp  jni_exception.cpp  jni_exception.h  scaler.cpp  scaler.h
avif-coder/src/main/cpp/libheif/: heif.h  heif_version.h
avif-coder/src/main/cpp/libyuv/libyuv/: basic_types.h  compare.h  compare_row.h  convert.h  convert_argb.h  convert_from.h  convert_from_argb.h  cpu_id.h  mjpeg_decoder.h  planar_functions.h  rotate.h  rotate_argb.h  rotate_row.h  row.h  scale.h  scale_argb.h  scale_rgb.h  scale_row.h  scale_uv.h  video_common.h
beforeafter/: build.gradle.kts
benchmark/: build.gradle.kts
build-logic/: settings.gradle.kts
colordetector/: build.gradle  build.gradle.kts
colorpicker/: build.gradle.kts
core-data/: build.gradle.kts
core-ui/: build.gradle.kts
jp2-coder/: CMakeLists.txt  build.gradle.kts
jp2-coder/src/main/: AndroidManifest.xml
jp2-coder/src/main/cpp/: openjpg.cpp  opj_apps_config.h  opj_config.h  opj_config_private.h
jp2-coder/src/main/cpp/openjpeg/: .travis.yml  AUTHORS.md  CHANGELOG.md  CMakeLists.txt  INSTALL.md  NEWS.md  README.md  appveyor.yml
jp2-coder/src/main/cpp/openjpeg/cmake/: CTestCustom.cmake.in  EnsureFileInclude.cmake  FindCPPCHECK.cmake  FindFCGI.cmake  FindJPYLYZER.cmake  FindKAKADU.cmake  FindLCMS.cmake  FindLCMS2.cmake  JPIPTestDriver.cmake  OpenJPEGCPack.cmake  OpenJPEGConfig.cmake.in  TestFileOffsetBits.c  TestLargeFiles.c.cmake.in  TestLargeFiles.cmake  TestWindowsFSeek.c  openjpeg_valgrind.supp
jp2-coder/src/main/cpp/openjpeg/doc/: CMakeLists.txt
jp2-coder/src/main/cpp/openjpeg/scripts/: astyle.options  astyle.sh  prepare-commit.sh  verify-indentation.sh
jp2-coder/src/main/cpp/openjpeg/src/lib/: CMakeLists.txt
jp2-coder/src/main/cpp/openjpeg/src/lib/openjp2/: CMakeLists.txt  bench_dwt.c  bio.c  bio.h  cidx_manager.c  cidx_manager.h  cio.c  cio.h
jp2-coder/src/main/cpp/openjpeg/src/lib/openjp3d/: CMakeLists.txt  bio.c  bio.h  cio.c  cio.h  dwt.c  dwt.h  event.c  event.h  fix.h  int.h  jp3d.c  jp3d.h  jp3d_lib.c  jp3d_lib.h  libopenjp3d.pc.cmake.in  mct.c  mct.h  mqc.c  mqc.h  openjp3d.c  openjp3d.h  opj_includes.h  pi.c  pi.h  raw.c  raw.h  t1.c  t1.h  t1_3d.c  t1_3d.h  t2.c  t2.h  tcd.c  tcd.h  tgt.c  tgt.h  volume.c  volume.h
jp2-coder/src/main/cpp/openjpeg/src/lib/openjpip/: CMakeLists.txt  auxtrans_manager.c  auxtrans_manager.h  box_manager.c  box_manager.h  boxheader_manager.c  boxheader_manager.h  byte_manager.c  byte_manager.h  cache_manager.c  cache_manager.h  cachemodel_manager.c  cachemodel_manager.h  channel_manager.c  channel_manager.h  codestream_manager.c  codestream_manager.h  dec_clientmsg_handler.c  dec_clientmsg_handler.h  faixbox_manager.c  faixbox_manager.h  ihdrbox_manager.c  ihdrbox_manager.h  imgreg_manager.c  imgreg_manager.h  imgsock_manager.c  imgsock_manager.h  index_manager.c  index_manager.h  j2kheader_manager.c  j2kheader_manager.h  jp2k_decoder.c  jp2k_decoder.h  jp2k_encoder.c  jp2k_encoder.h  jpip_parser.c  jpip_parser.h  jpipstream_manager.c  jpipstream_manager.h  libopenjpip.pc.cmake.in  (+22 more)
jp2-coder/src/main/cpp/openjpeg/src/lib/openjpwl/: CMakeLists.txt  crc.c  crc.h  jpwl.c  jpwl.h  jpwl_lib.c  libopenjpwl.pc.cmake.in  rs.c  rs.h
jp2-coder/src/main/cpp/openjpeg/src/lib/openmj2/: CMakeLists.txt  bio.c  bio.h  cio.c  cio.h  dwt.c  dwt.h  event.c  event.h  fix.h  image.c  image.h  int.h  j2k.c  j2k.h  j2k_lib.c  j2k_lib.h  jp2.c  jp2.h  jpt.c  jpt.h  mct.c  mct.h  mj2.c  mj2.h  mj2_convert.c  mj2_convert.h  mqc.c  mqc.h  openjpeg.c  openjpeg.h  opj_includes.h  opj_malloc.h  pi.c  pi.h  raw.c  raw.h  t1.c  t1.h  t1_luts.h  (+6 more)
jp2-coder/src/main/cpp/openjpeg/tests/: CMakeLists.txt  compare_dump_files.c  compare_images.c  compare_raw_files.c  include_openjpeg.c  j2k_random_tile_access.c  pdf2jp2.c  ppm2rgb3.c  test_decode_area.c  test_tile_decoder.c  test_tile_encoder.c
jp2-coder/src/main/cpp/openjpeg/tests/conformance/: CMakeLists.txt
jp2-coder/src/main/cpp/openjpeg/tests/fuzzers/: GNUmakefile  README.TXT  build_google_oss_fuzzers.sh  build_seed_corpus.sh  fuzzingengine.c  opj_decompress_fuzzer.cpp
jp2-coder/src/main/cpp/openjpeg/tests/nonregression/: CMakeLists.txt  checkmd5refs.cmake  md5refs.txt  test_suite.ctest.in
jp2-coder/src/main/cpp/openjpeg/tests/performance/: compare_perfs.py  perf_test.py  perf_test_filelist.csv
jp2-coder/src/main/cpp/openjpeg/tests/profiling/: filter_massif_output.py
jp2-coder/src/main/cpp/openjpeg/tests/unit/: CMakeLists.txt  testempty0.c  testempty1.c  testempty2.c
jp2-coder/src/main/cpp/openjpeg/tools/abi-tracker/: openjpeg.json
jp2-coder/src/main/cpp/openjpeg/tools/ctest_scripts/: toolchain-mingw32.cmake  toolchain-mingw64.cmake  travis-ci.cmake
jp2-coder/src/main/cpp/openjpeg/tools/travis-ci/: abi-check.sh  install.sh  knownfailures-Ubuntu14.04-gcc4.8.4-i386-Release-3rdP.txt  knownfailures-all.txt  knownfailures-windows-vs2010-x86-Release-3rdP.txt  run.sh  travis_rsa.enc
jp2-coder/src/main/cpp/openjpeg/wrapping/: CMakeLists.txt
jp2-coder/src/main/cpp/openjpeg/wrapping/java/: CMakeLists.txt
jp2-coder/src/main/cpp/openjpeg/wrapping/java/openjp2/: CMakeLists.txt  JavaOpenJPEG.c  JavaOpenJPEGDecoder.c  index.c  index.h  org_openJpeg_OpenJPEGJavaDecoder.h  org_openJpeg_OpenJPEGJavaEncoder.h
jp2-coder/src/main/cpp/openjpeg/wrapping/java/openjp2/java-sources/org/openJpeg/: OpenJPEGJavaDecoder.java  OpenJPEGJavaEncoder.java
jp2-coder/src/main/java/com/gemalto/jp2/: JP2Decoder.java  JP2Encoder.java
jxlcoder/src/main/cpp/: CMakeLists.txt  jxlcoder.cpp
jxlcoder/src/main/cpp/jpegli/: jconfig.h
jxlcoder/src/main/cpp/jxl/: jxl_threads_export.h  version.h
jxlcoder/src/main/cpp/libyuv/libyuv/: version.h
(+9928 files in other folders)
